# Elpis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  QUICKSTART.md  README.md  emotional-coding-agent-plan.md  pyproject.toml
.github/workflows/: docs.yml
configs/: config.default.toml  elpis.toml  hermes.toml  mnemosyne.toml  psyche.toml
docs/: WEEK3_COMPLETION_SUMMARY.md  architecture.rst  conf.py  index.rst  requirements.txt
docs/elpis/: architecture.rst  backends.rst  configuration.rst  emotion-system.rst  index.rst
docs/elpis/api/: config.rst  emotion.rst  index.rst  llm.rst  server.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
docs/hermes/: architecture.rst  index.rst
docs/hermes/api/: app.rst  index.rst  tools.rst  widgets.rst
docs/mnemosyne/: architecture.rst  consolidation.rst  index.rst  memory-types.rst
docs/mnemosyne/api/: constants.rst  index.rst  models.rst  server.rst  storage.rst
docs/psyche/: architecture.rst  features.rst  index.rst  tools.rst
docs/psyche/api/: client.rst  constants.rst  (+7 more)
examples/: 01_basic_inference.py  02_emotional_modulation.py  03_steering_vectors.py  04_mcp_server_usage.py  README.md
psyche/: README.md  pyproject.toml
psyche/src/psyche/: __init__.py  cli.py
psyche/src/psyche/client/: __init__.py  repl.py
psyche/src/psyche/memory/: __init__.py  compaction.py  server.py
psyche/src/psyche/tools/: __init__.py  tool_definitions.py  tool_engine.py
psyche/src/psyche/tools/implementations/: __init__.py  file_tools.py  search_tool.py
psyche/tests/: __init__.py
psyche/tests/integration/: test_elpis_client.py  test_memory_server.py
psyche/tests/unit/: test_directory_tool.py  test_mcp_client.py
scratchpad/: 2026-01-13-2121-text-tool-parsing.md  2026-01-14-mcp-refactor-final-report.md  2026-01-14-mcp-refactor-session.md  2026-01-14-test-verification-report.md  INDEX.md  emotional-coding-agent-plan.md  phase-2-refactoring-plan.md  phase1-implementation-plan.md  sheep_class.py  test-failure-analysis.md  test-fixes-summary.md
scratchpad/archive/: 2026-01-16-comprehensive-workplan.md
scratchpad/backend-refactor/: llama-cpp-agent-report.md
scratchpad/bug-investigation/: elpis-agent-report.md  github-issues.md  hive-mind-bug-hunt.md  mnemosyne-agent-report.md  psyche-agent-report.md
scratchpad/ideas/: psyche-improvements.md
scratchpad/initial-research/: INDEX.md  chromadb-report.md  hive-mind-notes.md  model-selection-report.md  tool-system-report.md
scratchpad/logs/: 2026-01-11-phase1-implementation.md  2026-01-13-phase2-implementation.md  session-2026-01-11-test-debugging.md  session-2026-01-13-phase2.md  session-2026-01-13-ui-debugging.md
scratchpad/long-term-memory/: final-report.md  hive-mind-consolidation.md  storage-agent-report.md
scratchpad/phase-1/: hive-mind.md  week3-agent-repl.md
scratchpad/phase-2-research/: INDEX.md  agent-frameworks-research.md  api-standards-research.md  chromadb-research.md  letta-architecture-research.md  mcp-protocol-research.md
scratchpad/plans/: 2026-01-14-streaming-stability-plan.md  2026-01-16-external-agent-architecture.md  2026-01-16-phase4-architecture-refactor.md  2026-01-16-psyche-substrate-workplan-v2.md  2026-01-17-phase5-implementation-details.md  2026-01-20-config-system-plan.md  2026-01-23-external-mcp-support.md  20260114-memory-summarization-plan.md  dynamic-emotion-updates.md  extract-tui-into-hermes.md  mnemosyne-constants-source-of-truth.md  phase6-remote-mode-tool-architecture-detailed.md  phase6-remote-mode-tool-architecture.md  phase7-memory-retrieval-quality.md  psyche-stateless-refactor.md  tool-architecture-refactor.md
scratchpad/psyche-architecture-review/: codebase-review-report.md  hive-mind-psyche-review.md  memory-systems-review-report.md  reasoning-workflows-review-report.md
scratchpad/psyche-artifacts/: cheese.txt
scratchpad/reports/: 2026-01-10-claude-log.md  2026-01-13-2201-session-summary.md  2026-01-14-1200-consolidation-session.md  2026-01-14-stability-fixes.md  2026-01-14-test-verification-final.md  2026-01-16-planning-session.md  2026-01-16-session13-integration-tests.md  2026-01-16-threading-fix.md  2026-01-17-phase4-complete.md  2026-01-18-memory-systems-research.md  2026-01-18-phase5-session.md  2026-01-18-phase6-remote-tool-architecture.md  2026-01-18-phase6-session-complete.md  2026-01-18-tool-use-research.md  2026-01-20-2130-remove-local-mode.md  2026-01-20-config-unification.md  2026-01-20-tool-architecture-refactor.md  2026-01-21-1343-constants-refactoring.md  2026-01-22-sphinx-docs-fixes.md  2026-01-23-mood-congruent-exploration.md  2026-01-24-design-improvements.md  2026-01-24-emotional-depth-complete.md  2026-01-24-phase7-hybrid-search-implementation.md  2026-01-25-documentation-update.md  2026-01-25-dynamic-emotion-updates.md  session-2026-01-13-phase2d.md  session-2026-01-16-psyche-fixes.md  session-2026-01-20-psyche-stateless-refactor.md
scratchpad/sphinx-docs/: elpis-agent-report.md  hive-mind-docs.md  mnemosyne-agent-report.md  psyche-agent-report.md  setup-agent-report.md
scripts/: README.md  analyze_emotions.py  debug_emotion_state.py  download_model.py  emotion_repl.py  export_memories.py  get_memory.py  inspect_emotion_vectors.py  list_memories.py  memory_db.py  read_memories.py  train_emotion_vectors.py
src/elpis/: __init__.py  cli.py  server.py
src/hermes/: __init__.py  app.py  cli.py  display.py  repl.py
src/mnemosyne/: __init__.py  cli.py  server.py
src/psyche/: __init__.py  cli.py  mcp_patch.py
src/shared/: __init__.py  mcp_patch.py
tests/: __init__.py  conftest.py
tests/integration/: test_agent_workflow.py  test_mcp_server.py  test_tool_execution.py
tests/shared/: test_shared_constants.py
tests/test_data/: elpis.toml  hermes.toml  mnemosyne.toml  psyche.toml
tests/unit/: test_bash_tool.py  test_config.py  test_directory_tool.py  test_emotion.py  test_file_tools.py  test_hardware_detection.py  test_llm_inference.py  test_orchestrator.py  test_repl.py  test_search_tool.py  test_tool_definitions.py  test_tool_engine.py
utils/: search_memories.py
(+231 files in other folders)
