[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psyche"
version = "0.1.0"
description = "Memory server and user client for Elpis inference"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "LemonEater" }]
dependencies = [
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
psyche = "psyche.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/psyche"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=src/psyche", "--cov-report=term-missing"]
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
